2004.02.02
  - Font preview palette added
  - Added preview to imageview's custom filter dialog

2004.01.30
  - You can now select multiple tiles in the tileset palette,
  and edit them as one single image in the tileset tab.

2004.01.27
  - Added tabbed windows

2004.01.17
  - Added a COMMAND_ANIMATE person command
  - Made rawfile_object.write produce a nicer error message if the rawfile wasn't writeable

2004.01.07
  - Added a multi-tile tool, just select the tiles you want to place by holding down the
    left mouse button in the Tiles window and drag until you have what you want to place on the map

2003.12.28
  - Made Sound player in editor better (it now requests an audio-device if needed)
  - Made "Package Game!" show a percentage complete message in the status bar

2003.12.25
  - Made Project View support multiple folders e.g. maps/towns/freddys.rmp and such

2003.12.24
  - Replaced Image/Map Tools palette with Image/Map toolbars
  - Made repeat command have a tick next to it when repeating
  - Added shortkey key combos to the menu's

2003.12.14
  - Added Import Direction From Animation and Export Direction To Animation

2003.12.09
  - Made Resample better (or more correct) - gau_veldt
  - Added Resample Spriteset

2003.08.31
  - Added shortcuts for Copy and Paste in ImageView and SpritesetView - Tim Enderling

2003.08.20
  - Palettes can be dockable now - Tim Enderling
  - Added File->Browse

2003.08.14
  - Added a Spriteset Animation pallete
  (so you can preview what the spriteset's animation will look like) - Tim Enderling

2003.08.11
  - SetLayerAlpha/GetLayerAlpha became SetLayerMask/GetLayerMask
    (Just as fast as LayerAlpha's, but can do per layer color tinting much like ApplyColorMask)
  - Added a freehand selection tool for the image editor (doesn't fully work yet)

2003.07.05
  - Added move entity maptool
  - You can now paste images from the clipboard onto the map using the Paste Area tool.

2003.07.03